fixed telegram image sticking to edges on mobile

--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -140,6 +140,7 @@ background-color: #e0e0e0;
   #landingBlock2
   {
     align-self: center;
+    width: inherit;
   }
 }
 
